# wikipedia

./: .gitignore  CLAUDE.md  LICENSE  README.md  find-date-gaps.py  main.py  pyproject.toml  requirements.txt  wikipedia-root.ipynb  wikipedia.ipynb  wikipedia_analysis.ipynb
agents/: CONTEXT.md  orchestrator.sh
agents/evals/: generate-cases.py  run-evals.py
agents/mock_data/: ontology.json  pageviews.json
cloudformation/: README.md  call-pageviews-lambda-range.py  deploy-inline-lambda.sh  init.sh  samconfig.toml  template.yaml  wikipedia-stats-template-inline.yaml
docs/plans/: 2026-02-19-feat-improve-synthesis-score-data-driven-narratives-plan.md
evals/: __init__.py  framework.py  heuristic.py  judge.py  run_eval.py  test_eval.py
evals/fixtures/: generate_fixtures.py
lambda/: init-local-python.sh  wikipedia-downloader-lambda.py
notebooks/: analysis.ipynb
providers/aws/: README.md
providers/azure/: README.md
providers/digitalocean/: README.md
providers/gcp/: Dockerfile  README.md  requirements.txt
scripts/: analyze-deep.py  analyze-spikes.py  backfill-gcs.py  convert-to-sqlite.py  download-pageviews.py  enrich-metadata.py  find-date-gaps.py  generate-report.py  review-flagged.py  wavelet-tutorial.py
shared/: README.md
shared/wikipedia/: __init__.py  client.py  filters.py  graph_analysis.py  ontology.py  storage.py
stack-init/: init-roles.sh  init.sh  lambda-bootstrap.sh
stack-init/python-deps-project/: example.py  (+1 more)
terraform/: terraform-shell-script.sh
tests/: test_client.py  test_filters.py  test_ontology.py  test_storage.py
(+32 files in other folders)
